# WeFlow-MaiBot-Bridge

./: .gitignore  LICENSE  README.md  config.example.toml  pyproject.toml  start.bat
src/weflow_maibot_bridge/: __init__.py  app.py  buffer.py  caption.py  cli.py  config.py  media.py  messages.py  models.py  outbound.py  process_lock.py  router.py  sse.py  storage.py  uia.py  weflow.py
tests/: conftest.py  test_app_workers.py  test_config.py  test_models_messages.py  test_process_lock.py  test_router_version.py  test_sse_buffer.py  test_storage_media_outbound.py  test_uia.py  test_weflow_client.py
